samples/_failures_safe/1761320649_378661_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28d44a1c.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_28d44a1c.c:182:13: error: expected declaration or statement at end of input
  182 |             printf("Vertex %d: %d\n", i, dist[i]);
      |             ^~~~~~
./samples/SAFE/__tmp_28d44a1c.c:182:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_28d44a1c.c:182:13: error: expected declaration or statement at end of input
